knxd (0.10.2-4) UNRELEASED; urgency=medium

  * Fix sock->sendaddr churn.
  * Include sys/select.h if available.
  * Clean up error handling
  * Delete Unix socket after closing it.
  * Debian packaging: do create /var/lib/knxd

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 05 Jul 2015 19:47:26 +0200

knxd (0.10.1-2) unstable; urgency=medium

  * Merge build fixes

 -- Matthias Urlichs <matthias@urlichs.de>  Sat, 27 Jun 2015 20:26:00 +0200

knxd (0.10.1-1) unstable; urgency=medium

  * Depend on systemd library
  * Fix systemd support

 -- Matthias Urlichs <matthias@urlichs.de>  Sat, 27 Jun 2015 16:00:51 +0000

knxd (0.10.0-2) unstable; urgency=medium

  * Bug fixes

 -- Matthias Urlichs <matthias@urlichs.de>  Fri, 26 Jun 2015 08:23:17 +0000

knxd (0.10.0-1) unstable; urgency=medium

  * Initial multi-L2 version

 -- Matthias Urlichs <matthias@urlichs.de>  Fri, 26 Jun 2015 08:23:17 +0000

knxd (0.9.1-2) unstable; urgency=medium

  * Build fixes

 -- Matthias Urlichs <matthias@urlichs.de>  Sat, 27 Jun 2015 20:24:46 +0200

knxd (0.9.1-1) unstable; urgency=medium

  * Release. (Sort of.)
  * Bugs fixed.

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 18 May 2015 07:24:02 +0200

knxd (0.9.0-1) unstable; urgency=low

  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>

 -- Timo <knxd@timo-wingender.de>  Tue, 16 Dec 2014 12:55:54 +0100