@@ -5,6 +5,7 @@ knxd (0.10.2-4) UNRELEASED; urgency=medium
   * Clean up error handling
   * Delete Unix socket after closing it.
   * Debian packaging: do create /var/lib/knxd
+  * Warn about wrongly-ordered or unrecognized flag options
 
  -- Matthias Urlichs <matthias@urlichs.de>  Sun, 05 Jul 2015 19:47:26 +0200
 
